--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,18 +1,20 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "Backend for Deception Manager Game"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.12"
 dependencies = [
-    "apscheduler>=3.11.2",
-    "fastapi>=0.129.0",
-    "loguru>=0.7.3",
-    "pydantic>=2.12.5",
-    "pydantic-settings>=2.13.1",
-    "python-dotenv>=1.2.1",
-    "python-multipart>=0.0.22",
-    "redis>=7.2.0",
-    "uvicorn[standard]>=0.41.0",
-    "websockets>=16.0",
+    "apscheduler>=3.11.0",
+    "fastapi>=0.115.0",
+    "gotrue>=2.12.0",
+    "loguru>=0.7.2",
+    "pydantic>=2.10.0",
+    "pydantic-settings>=2.7.0",
+    "python-dotenv>=1.0.0",
+    "python-multipart>=0.0.10",
+    "redis>=5.0.0",
+    "supabase>=2.11.0",
+    "uvicorn[standard]>=0.30.0",
+    "websockets>=14.0",
 ]
