--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   provider: ^6.1.1
   supabase_flutter: ^2.0.2
   json_annotation: ^4.8.1
+  uuid: ^4.2.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
